--- a/index.html
+++ b/index.html
@@ -686,7 +686,7 @@ data-theme="light">
 
                
               <div> <br>
-                <textarea class="textarea textarea-primary text-white w-full bg-[#21245c]" placeholder="Bio"></textarea>
+                <textarea class="textarea textarea-primary text-white w-full bg-[#21245c]" placeholder="Your message"></textarea>
               </div>
               <div class="flex justify-center mt-3">
                 <button class="btn btn btn-secondary rounded-3xl">SEND MESSAGE -></button>
